@@ -7,6 +7,7 @@ Revision history for Genealogy::FindaGrave
 	Use Test::DescribeMe to simplify tests
 	Use Test::Needs
 	Calling new on an object now returns a clone rather than setting the defaults in the new object
+	Refactor get_next_entry
 
 0.06	Tue Aug 28 10:16:33 EDT 2018
 	Fix undefined variable usage
